Sonar Perf Issue Fixed / DatabasesInContext